@@ -12,6 +12,7 @@ DIST python-gentoo-patches-3.7.9.tar.xz 10588 BLAKE2B f60c8500671e7e3977412474c8
 EBUILD python-2.7.18-r100.ebuild 12236 BLAKE2B 3a9c60b953bbf33e762ea29c207dab3c6dea3d6fffc6c388fcf2c726bd3745a514d8c069f8e2853a137bf30c193806422ef46c624e58e0dc4b1a875bb28c39d3 SHA512 b075978f095aa91a964eb5e8ae63076bf956d17c07384769bfee8ac30306242537a27eb90f9c9ed2b70aea7fc8766f948ebcb682fa2b4c6c8e5c34ee1a724ee7
 EBUILD python-3.7.7-r2.ebuild 9982 BLAKE2B 7e8f9bdb4c11d673b9d626a66dc3babece5470f2df471cfb299ce54f5af35f441ed38c51c6a11c3746e3d751170198e5be9c17cb442a0c5d17dc14935e888cbf SHA512 fbff584b2e278cbcb87819d08c6e7f4175b1c83ae28cf79cddb70a9efc996a25303c76ee95ce927e8e392ee7e02c207a2709f0e5f5b46dfd015a5337f8084d3e
 EBUILD python-3.7.8-r2.ebuild 9902 BLAKE2B b9628bfacda6887dfbbf49f8ade319e6e75421e9b2ae3d0f0163670889eedf7d4b566ce3602566e906a2f23b4f50f060953d63004f4466306d0f79a86d64e51c SHA512 fc8c6ca42c0cd78d86799bb19627e31fd2ef1e31bce157e529e04f2e916e5db9bb47e9d87962215a866d3b24ec103600fda993681180f3117b0e36b7688293b5
+EBUILD python-3.7.9-r1.ebuild 9972 BLAKE2B 8dea1769618c12663cdc309394f4b88f721c8d1dbadac96431f6732da0edda5d782b77b9b0957ecba7a1cbcd4049a391ea9b58bfffc0282648267baceb509b02 SHA512 01e6db0a6d317c4341773be45e87fef43f992cdcd31d7928c4e6e8c64adf99228f70ad915fe399dfbe40c8146a2013c9a9515971d5f1af40ad76be4c36e47cdd
 EBUILD python-3.7.9.ebuild 9905 BLAKE2B 35fdaeb7d63e83b5dc64db14f8588aa86dfbddd52a5d855f7996b4c31e51cf0ab17c81809f1d69b1e4ef65c318826fb27f2ac7596c319d4c2b9061973250df44 SHA512 1d58fa66bb3ab5eddb1fc740a2344d4dbca0d19ea1dccef14087110c54aaf06d8d1eaf0a6b96271a0bf8f2472afa01f47650acc1f299fee6c4aad5820b8aa723
-MISC ChangeLog 788 BLAKE2B 755e34d705ad346574bfa343426abe64d7341382c784d5a836398c8b5f17749ad064868a0206a31c950f0798486c53f9c02536a3f2adac9e652510a6d10d3c60 SHA512 6c64cf8dfa062858b3063f4cfd3850eec650098bcbfbce0e424110fe477881be3ffd1255928b6ff0f705eed344fb320dcca73f460bf6451396882e37e7c7f069
+MISC ChangeLog 907 BLAKE2B 5d9abffe54dfb789226d44e29ae6c325e285c73cd339d7974bb7cf505e3b1aa66db32907adf82c7cc5b7903e340940fa07b5f35e4879e6290073522cdf0c229b SHA512 8a49de25ec08f635fc5d1f840a3a00642dc63133f188703e2d2a1b66471198e9d25c9d446c534c281a2d0dd64248168fb779c9f84c202bbbd2aa6e399fdbfc64
 MISC metadata.xml 819 BLAKE2B 120c7c65d77488e726c5a0f4aa19469867ea6900e747169fae2f9cf8f14ec2936089d5edfe1935ce610bec26387273e261b1cc4b023680c8c4b229f2141a7223 SHA512 08f45707e5490067a21951b9d37c8ae67064ab67cccc5b8d8c204eab8d4a004fb910627b62989c67b849b89d301618f8f8f7996e99e1ef5bab38a239c49c124d
