@@ -1,3 +1,6 @@
+*python-3.7.9-r1
+::gentoo			add jobs fix, remove extra whitespace
+::lto-overlay		simplify pgo, remove extra whitespace
 *python-3.7.9
 ::gentoo			update keywords
 *python-3.7.8-r2
